Fix issue with firefox scrollbars

--- a/app/styles/components/settings.scss
+++ b/app/styles/components/settings.scss
@@ -10,8 +10,8 @@
 
   .settings-content {
     height:calc(100% - 110px);
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-x: visible;
+    overflow-y: auto;
   }
 }
 .settings header                       {
